--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,21 @@
 
 .mock-messenger{
   display: flex;
+  gap: 1.5rem;
+  min-height: 75vh;
 }
 
 .friend-list-panel{
+  flex: 1 1 25%;
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
+  border-right: 1px solid #bbb4b4;
+  justify-content: center;
 }
 
 .chat-panel{
+  flex: 1 4 75%;
   display: flex;
   flex-direction: column;
 }
