--- a/src/components/ChatInput/ChatInput.css
+++ b/src/components/ChatInput/ChatInput.css
@@ -3,4 +3,9 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    gap: 1rem;
+}
+
+.chat-input-container textarea{
+    width: 100%;
 }
