--- a/src/components/FriendList/FriendList.css
+++ b/src/components/FriendList/FriendList.css
@@ -1,12 +1,14 @@
 .friend-list{
     list-style: none;
-    padding: 0;
+    padding: 0;   
 }
 
 .friend-list-item{
     display: flex;
     width: 100%;
+    justify-content: center;
 }
+.friend-list-item a{width: 100%;}
 
 .active{
     background-color: rgb(199, 186, 186);
