--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,42 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
   width: 100%;
 }
 
-.mock-messenger{
+.mock-messenger {
   display: flex;
   gap: 1.5rem;
   min-height: 75vh;
 }
 
-.friend-list-panel{
+.friend-list-panel {
   flex: 1 1 25%;
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 0.5rem;
   border-right: 1px solid #bbb4b4;
   justify-content: center;
 }
 
-.chat-panel{
-  flex: 1 4 75%;
+.open{
+  display:flex;
+}
+
+.chat-panel {
+  flex: 1 1 75%;
   display: flex;
   flex-direction: column;
+}
+
+
+@media only screen and (min-width: 600px) {
+  
+}
+
+@media only screen and (min-width: 768px) {
+  .friend-list-panel {
+    display: flex;
+  }
 }
